# GlobalAntiScamOrg-blocklist

./: .gitignore  .tokeignore  README.md  global-anti-scam-org-scam-ips.txt  global-anti-scam-org-scam-urls-ABP.txt  global-anti-scam-org-scam-urls-UBL.txt  global-anti-scam-org-scam-urls-UBO.txt  global-anti-scam-org-scam-urls-pihole.txt  global-anti-scam-org-scam-urls.txt  main.py  pyproject.toml  renovate.json  requirements.txt  scraper.py
.github/workflows/: scraper.yml
