[project]
dependencies = [
  "bandit>=1.8.5",
  "black>=25.1.0",
  "mypy>=1.16.1",
  "mypy-extensions>=1.1.0",
  "pylint>=3.3.7",
  "requests>=2.32.4",
  "selenium>=4.34.0",
  "tldextract>=5.3.0",
  "typing-extensions>=4.14.1",
]
description = "Machine-readable .txt blocklist of scam URLs and IP Addresses from the Global Anti Scam Organization website, updated once a day."
name = "GlobalAntiScamOrg-blocklist"
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.1"
