[project]
dependencies = [
  "selenium>=4.38.0",
  "tldextract>=5.3.0",
]
description = "Machine-readable .txt blocklist of scam URLs and IP Addresses from the Global Anti Scam Organization website, updated once a day."
name = "GlobalAntiScamOrg-blocklist"
readme = "README.md"
requires-python = ">=3.14"
version = "0.0.1"
